# ble-protocol

./: README.md
.github/workflows/: deploy-pages.yml
ble-broadcaster/: Cargo.toml
ble-broadcaster/src/: main.rs
ble-client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ble-client/src/: App.vue
ble-client/src/components/: BrowserSupport.vue  NotificationCard.vue  NotificationList.vue  ScanControls.vue  ScanLog.vue
ble-client/src/composables/: useBluetooth.ts
ble-client/src/protocol/: parser.ts  types.ts
ble-repeater/: Cargo.toml  sdkconfig.defaults
ble-repeater/.cargo/: config.toml
ble-repeater/src/: main.rs
