[package]
name = "ble-broadcaster"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
